--- a/LateX/bibliografia/my_bib.bib
+++ b/LateX/bibliografia/my_bib.bib
@@ -21,3 +21,41 @@
 	Date-Added = {2020-06-24 16:16:40 +0200},
 	Date-Modified = {2020-06-24 16:17:58 +0200},
 	Title = {The quest for CMB B-modes}}
+
+
+@book{wilson,
+  title={Tools of Radio Astronomy: Problems and Solutions},
+  author={Wilson, T.L. and H{\"u}ttemeister, S.},
+  isbn={9783642570018},
+  lccn={00026396},
+  series={Astronomy and Astrophysics Library},
+  url={https://books.google.it/books?id=uK8SBwAAQBAJ},
+  year={2012},
+  publisher={Springer Berlin Heidelberg}
+}
+
+
+@book{silver,
+  title={Microwave Antenna Theory and Design},
+  author={Silver, S. and Institution of Electrical Engineers},
+  isbn={9780863410178},
+  lccn={84230878},
+  series={IEE electromagnetic waves series},
+  url={https://books.google.it/books?id=Aex6dlKreHEC},
+  year={1984},
+  publisher={P. Peregrinus}
+}
+
+
+@article{planck,
+	author = {{Planck Collaboration} and {Aghanim, N.} and {Armitage-Caplan, C.} and {Arnaud, M.} and {Ashdown, M.} and {Atrio-Barandela, F.} and {Aumont, J.} and {Baccigalupi, C.} and {Banday, A. J.} and {Barreiro, R. B.} and {Battaner, E.} and {Benabed, K.} and {Beno\^{\i}t, A.} and {Benoit-L\'evy, A.} and {Bernard, J.-P.} and {Bersanelli, M.} and {Bielewicz, P.} and {Bobin, J.} and {Bock, J. J.} and {Bonaldi, A.} and {Bonavera, L.} and {Bond, J. R.} and {Borrill, J.} and {Bouchet, F. R.} and {Bridges, M.} and {Bucher, M.} and {Burigana, C.} and {Butler, R. C.} and {Cappellini, B.} and {Cardoso, J.-F.} and {Catalano, A.} and {Chamballu, A.} and {Chen, X.} and {Chiang, L.-Y} and {Christensen, P. R.} and {Church, S.} and {Colombi, S.} and {Colombo, L. P. L.} and {Crill, B. P.} and {Curto, A.} and {Cuttaia, F.} and {Danese, L.} and {Davies, R. D.} and {Davis, R. J.} and {de Bernardis, P.} and {de Rosa, A.} and {de Zotti, G.} and {Delabrouille, J.} and {Dickinson, C.} and {Diego, J. M.} and {Dole, H.} and {Donzelli, S.} and {Dor\'e, O.} and {Douspis, M.} and {Dupac, X.} and {Efstathiou, G.} and {En\ss{}lin, T. A.} and {Eriksen, H. K.} and {Finelli, F.} and {Forni, O.} and {Frailis, M.} and {Franceschi, E.} and {Gaier, T. C.} and {Galeotta, S.} and {Ganga, K.} and {Giard, M.} and {Giardino, G.} and {Giraud-H\'eraud, Y.} and {Gjerl\o{}w, E.} and {Gonz\'alez-Nuevo, J.} and {G\'orski, K. M.} and {Gratton, S.} and {Gregorio, A.} and {Gruppuso, A.} and {Hansen, F. K.} and {Hanson, D.} and {Harrison, D.} and {Henrot-Versill\'e, S.} and {Hern\'andez-Monteagudo, C.} and {Herranz, D.} and {Hildebrandt, S. R.} and {Hivon, E.} and {Hobson, M.} and {Holmes, W. A.} and {Hornstrup, A.} and {Hovest, W.} and {Huffenberger, K. M.} and {Jaffe, A. H.} and {Jaffe, T. R.} and {Jewell, J.} and {Jones, W. C.} and {Juvela, M.} and {Kangaslahti, P.} and {Keih\"anen, E.} and {Keskitalo, R.} and {Kisner, T. S.} and {Knoche, J.} and {Knox, L.} and {Kunz, M.} and {Kurki-Suonio, H.} and {Lagache, G.} and {L\"ahteenm\"aki, A.} and {Lamarre, J.-M.} and {Lasenby, A.} and {Laureijs, R. J.} and {Lawrence, C. R.} and {Leach, S.} and {Leahy, J. P.} and {Leonardi, R.} and {Lesgourgues, J.} and {Liguori, M.} and {Lilje, P. B.} and {Linden-V\o{}rnle, M.} and {L\'opez-Caniego, M.} and {Lubin, P. M.} and {Mac\'{\i}as-P\'erez, J. F.} and {Maino, D.} and {Mandolesi, N.} and {Maris, M.} and {Marshall, D. J.} and {Martin, P. G.} and {Mart\'{\i}nez-Gonz\'alez, E.} and {Masi, S.} and {Massardi, M.} and {Matarrese, S.} and {Matthai, F.} and {Mazzotta, P.} and {Meinhold, P. R.} and {Melchiorri, A.} and {Mendes, L.} and {Mennella, A.} and {Migliaccio, M.} and {Mitra, S.} and {Moneti, A.} and {Montier, L.} and {Morgante, G.} and {Mortlock, D.} and {Moss, A.} and {Munshi, D.} and {Naselsky, P.} and {Natoli, P.} and {Netterfield, C. B.} and {N\o{}rgaard-Nielsen, H. U.} and {Novikov, D.} and {Novikov, I.} and {O\'{}Dwyer, I. J.} and {Osborne, S.} and {Paci, F.} and {Pagano, L.} and {Paladini, R.} and {Paoletti, D.} and {Partridge, B.} and {Pasian, F.} and {Patanchon, G.} and {Pearson, D.} and {Peel, M.} and {Perdereau, O.} and {Perotto, L.} and {Perrotta, F.} and {Pierpaoli, E.} and {Pietrobon, D.} and {Plaszczynski, S.} and {Pointecouteau, E.} and {Polenta, G.} and {Ponthieu, N.} and {Popa, L.} and {Poutanen, T.} and {Pratt, G. W.} and {Pr\'ezeau, G.} and {Prunet, S.} and {Puget, J.-L.} and {Rachen, J. P.} and {Rebolo, R.} and {Reinecke, M.} and {Remazeilles, M.} and {Ricciardi, S.} and {Riller, T.} and {Rocha, G.} and {Rosset, C.} and {Rossetti, M.} and {Roudier, G.} and {Rubi\~no-Mart\'{\i}n, J. A.} and {Rusholme, B.} and {Sandri, M.} and {Santos, D.} and {Scott, D.} and {Seiffert, M. D.} and {Shellard, E. P. S.} and {Spencer, L. D.} and {Starck, J.-L.} and {Stolyarov, V.} and {Stompor, R.} and {Sureau, F.} and {Sutton, D.} and {Suur-Uski, A.-S.} and {Sygnet, J.-F.} and {Tauber, J. A.} and {Tavagnacco, D.} and {Terenzi, L.} and {Toffolatti, L.} and {Tomasi, M.} and {Tristram, M.} and {Tucci, M.} and {Tuovinen, J.} and {T\"urler, M.} and {Umana, G.} and {Valenziano, L.} and {Valiviita, J.} and {Van Tent, B.} and {Varis, J.} and {Vielva, P.} and {Villa, F.} and {Vittorio, N.} and {Wade, L. A.} and {Wandelt, B. D.} and {Watson, R.} and {Wilkinson, A.} and {Yvon, D.} and {Zacchei, A.} and {Zonca, A.}},
+	title = {Planck 2013 results. V. LFI
+          calibration},
+	DOI= "10.1051/0004-6361/201321527",
+	url= "https://doi.org/10.1051/0004-6361/201321527",
+	journal = {A\&A},
+	year = 2014,
+	volume = 571,
+	pages = "A5",
+}
+
