--- a/LateX/frontespizio/frontespizio.tex
+++ b/LateX/frontespizio/frontespizio.tex
@@ -35,15 +35,15 @@ openright]{book}
 
 \begin{center}
 \vspace{3 cm}
-%{\Huge {Stima delle proprietà di sistemi ottici nelle} }
-%\vskip 0.2 cm
-%{\Huge {microonde tramite l'utilizzo di reti neurali} }
 
-{\huge {STIMA DELLE PROPRIETÀ DI SISTEMI} }
-\vskip 0.2 cm
-{\huge {OTTICI NELLE MICROONDE TRAMITE} }
-\vskip 0.2 cm
-{\huge {L'UTILIZZO DI RETI NEURALI} }
+{\huge \textbf{Stima delle proprietà di sistemi ottici nelle microonde tramite l'utilizzo di reti neurali} }
+
+
+%{\huge {STIMA DELLE PROPRIETÀ DI SISTEMI} }
+%\vskip 0.2 cm
+%{\huge {OTTICI NELLE MICROONDE TRAMITE} }
+%\vskip 0.2 cm
+%{\huge {L'UTILIZZO DI RETI NEURALI} }
 
 \end{center}
 \par
